--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 h1{
     color: blue;
-    background-color: black;
+    background-color: hsl(190, 74%, 28%);
     font-size: 30px ;
     font-weight: 600;
 }
 h2{
     color: red;
-    background-color: white;
+    background-color: rgb(145, 11, 140);
 }
 h3{
     background-color: green;
