changing title in style in html and css file

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ h1{
     font-weight: 600;
 }
 p{
-    background-color:aquamarine ;
-    color: indigo;
-    font-size: 20px;
+    background-color:#000000;
+    color: rgb(130, 0, 95);
+    font-size: 70px;
+    font-weight: 700;
 }
