--- a/style.css
+++ b/style.css
@@ -6,11 +6,17 @@ h1{
 }
 p{
     background-color:#000000;
-    color: rgb(130, 0, 95);
+    color: rgb(0, 98, 130);
     font-size: 70px;
     font-weight: 700;
 }
 h2{
     color: hotpink;
     background-color:darkslategrey;
+}
+.class{
+    color: rgb(130, 0, 95);
+    background-color: #000000;
+    font-size: 80px ;
+    font-family: 900;
 }
