--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ h3{
     font-weight: 900;
     font-size: 100px;
 }
+h4{
+    font-size: 130px;
+    font-weight: bolder;
+    color: indigo;
+    background-color: fuchsia;
+    text-transform: capitalize;
+}
